--- a/fyp.ipynb
+++ b/fyp.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 451,
    "id": "dc156ba4-8f2a-4540-9908-5fbd04df0873",
    "metadata": {
     "scrolled": true
@@ -105,215 +105,29 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>player_time</th>\n",
-       "      <th>head_pitch</th>\n",
-       "      <th>head_yaw</th>\n",
-       "      <th>frame</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0 days 00:00:00.026000</td>\n",
-       "      <td>347.4626</td>\n",
-       "      <td>224.5580</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0 days 00:00:00.039000</td>\n",
-       "      <td>347.6424</td>\n",
-       "      <td>225.9487</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0 days 00:00:00.049000</td>\n",
-       "      <td>347.7431</td>\n",
-       "      <td>226.6496</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0 days 00:00:00.071000</td>\n",
-       "      <td>347.9284</td>\n",
-       "      <td>228.0539</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0 days 00:00:00.081000</td>\n",
-       "      <td>348.0129</td>\n",
-       "      <td>228.7774</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>0 days 00:00:00.100000</td>\n",
-       "      <td>348.0969</td>\n",
-       "      <td>229.4977</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>0 days 00:00:00.115000</td>\n",
-       "      <td>348.2663</td>\n",
-       "      <td>230.9411</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>0 days 00:00:00.127000</td>\n",
-       "      <td>348.3876</td>\n",
-       "      <td>231.6740</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>0 days 00:00:00.140000</td>\n",
-       "      <td>348.4825</td>\n",
-       "      <td>232.4104</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>0 days 00:00:00.153000</td>\n",
-       "      <td>348.5965</td>\n",
-       "      <td>233.1445</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>0 days 00:00:00.168000</td>\n",
-       "      <td>348.7630</td>\n",
-       "      <td>234.6275</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>0 days 00:00:00.181000</td>\n",
-       "      <td>348.8381</td>\n",
-       "      <td>235.3535</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>0 days 00:00:00.192000</td>\n",
-       "      <td>348.8381</td>\n",
-       "      <td>235.3535</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>0 days 00:00:00.206000</td>\n",
-       "      <td>348.8381</td>\n",
-       "      <td>235.3535</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>0 days 00:00:00.218000</td>\n",
-       "      <td>348.8381</td>\n",
-       "      <td>235.3535</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>0 days 00:00:00.232000</td>\n",
-       "      <td>348.8381</td>\n",
-       "      <td>235.3535</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>0 days 00:00:00.241000</td>\n",
-       "      <td>348.8381</td>\n",
-       "      <td>235.3535</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>0 days 00:00:00.253000</td>\n",
-       "      <td>348.8381</td>\n",
-       "      <td>235.3535</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>0 days 00:00:00.265000</td>\n",
-       "      <td>348.8950</td>\n",
-       "      <td>236.0829</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>0 days 00:00:00.277000</td>\n",
-       "      <td>348.8950</td>\n",
-       "      <td>236.0829</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>0 days 00:00:00.291000</td>\n",
-       "      <td>348.8950</td>\n",
-       "      <td>236.0829</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "              player_time  head_pitch  head_yaw  frame\n",
-       "0  0 days 00:00:00.026000    347.4626  224.5580      0\n",
-       "1  0 days 00:00:00.039000    347.6424  225.9487      0\n",
-       "2  0 days 00:00:00.049000    347.7431  226.6496      0\n",
-       "3  0 days 00:00:00.071000    347.9284  228.0539      1\n",
-       "4  0 days 00:00:00.081000    348.0129  228.7774      1\n",
-       "5  0 days 00:00:00.100000    348.0969  229.4977      2\n",
-       "6  0 days 00:00:00.115000    348.2663  230.9411      2\n",
-       "7  0 days 00:00:00.127000    348.3876  231.6740      3\n",
-       "8  0 days 00:00:00.140000    348.4825  232.4104      3\n",
-       "9  0 days 00:00:00.153000    348.5965  233.1445      3\n",
-       "10 0 days 00:00:00.168000    348.7630  234.6275      4\n",
-       "11 0 days 00:00:00.181000    348.8381  235.3535      4\n",
-       "12 0 days 00:00:00.192000    348.8381  235.3535      4\n",
-       "13 0 days 00:00:00.206000    348.8381  235.3535      4\n",
-       "14 0 days 00:00:00.218000    348.8381  235.3535      4\n",
-       "15 0 days 00:00:00.232000    348.8381  235.3535      4\n",
-       "16 0 days 00:00:00.241000    348.8381  235.3535      4\n",
-       "17 0 days 00:00:00.253000    348.8381  235.3535      4\n",
-       "18 0 days 00:00:00.265000    348.8950  236.0829      5\n",
-       "19 0 days 00:00:00.277000    348.8950  236.0829      5\n",
-       "20 0 days 00:00:00.291000    348.8950  236.0829      5"
+       "0           0\n",
+       "1           0\n",
+       "2           0\n",
+       "3           1\n",
+       "4           1\n",
+       "         ... \n",
+       "21609    6163\n",
+       "21610    6163\n",
+       "21611    6163\n",
+       "21612    6164\n",
+       "21613    6164\n",
+       "Name: frame, Length: 21614, dtype: int64"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 451,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "consolidated_data.loc[:20,['player_time','head_pitch','head_yaw','frame']]"
+    "consolidated_data.loc[:20,['player_time','head_pitch','head_yaw','frame']]\n",
+    "consolidated_data['frame']"
    ]
   },
   {
@@ -536,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 446,
    "id": "3cda43ab-da61-4b70-a957-d4472fd68694",
    "metadata": {},
    "outputs": [
@@ -572,28 +386,151 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2695</th>\n",
-       "      <td>4000</td>\n",
-       "      <td>21.388008</td>\n",
-       "      <td>148.24826</td>\n",
-       "      <td>3.733878</td>\n",
-       "      <td>0.285734</td>\n",
-       "      <td>-0.667088</td>\n",
-       "      <td>-0.742957</td>\n",
+       "      <th>2275</th>\n",
+       "      <td>2</td>\n",
+       "      <td>351.284271</td>\n",
+       "      <td>230.927063</td>\n",
+       "      <td>2.415903</td>\n",
+       "      <td>-0.813834</td>\n",
+       "      <td>0.082975</td>\n",
+       "      <td>-0.519310</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2665</th>\n",
+       "      <td>4</td>\n",
+       "      <td>351.602997</td>\n",
+       "      <td>233.405884</td>\n",
+       "      <td>2.501633</td>\n",
+       "      <td>-0.822167</td>\n",
+       "      <td>0.079989</td>\n",
+       "      <td>-0.515892</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4206</th>\n",
+       "      <td>5</td>\n",
+       "      <td>351.423523</td>\n",
+       "      <td>234.072800</td>\n",
+       "      <td>2.518144</td>\n",
+       "      <td>-0.827331</td>\n",
+       "      <td>0.087796</td>\n",
+       "      <td>-0.507282</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>499</th>\n",
+       "      <td>10</td>\n",
+       "      <td>352.840240</td>\n",
+       "      <td>236.968872</td>\n",
+       "      <td>2.691829</td>\n",
+       "      <td>-0.841231</td>\n",
+       "      <td>0.021823</td>\n",
+       "      <td>-0.457232</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1563</th>\n",
+       "      <td>12</td>\n",
+       "      <td>353.433258</td>\n",
+       "      <td>242.206116</td>\n",
+       "      <td>3.015769</td>\n",
+       "      <td>-0.869174</td>\n",
+       "      <td>-0.017185</td>\n",
+       "      <td>-0.389148</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2432</th>\n",
+       "      <td>6160</td>\n",
+       "      <td>357.962280</td>\n",
+       "      <td>281.465393</td>\n",
+       "      <td>3.929520</td>\n",
+       "      <td>-0.897379</td>\n",
+       "      <td>-0.200389</td>\n",
+       "      <td>0.181674</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>848</th>\n",
+       "      <td>6160</td>\n",
+       "      <td>357.906311</td>\n",
+       "      <td>282.046936</td>\n",
+       "      <td>3.928646</td>\n",
+       "      <td>-0.893295</td>\n",
+       "      <td>-0.198278</td>\n",
+       "      <td>0.193512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2236</th>\n",
+       "      <td>6161</td>\n",
+       "      <td>357.973267</td>\n",
+       "      <td>281.110138</td>\n",
+       "      <td>3.923431</td>\n",
+       "      <td>-0.901189</td>\n",
+       "      <td>-0.197387</td>\n",
+       "      <td>0.171241</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3160</th>\n",
+       "      <td>6161</td>\n",
+       "      <td>357.972595</td>\n",
+       "      <td>280.849640</td>\n",
+       "      <td>3.918670</td>\n",
+       "      <td>-0.902586</td>\n",
+       "      <td>-0.196400</td>\n",
+       "      <td>0.167179</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>316</th>\n",
+       "      <td>6164</td>\n",
+       "      <td>357.973145</td>\n",
+       "      <td>277.838531</td>\n",
+       "      <td>3.864585</td>\n",
+       "      <td>-0.919987</td>\n",
+       "      <td>-0.184369</td>\n",
+       "      <td>0.121693</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>4322 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "      frame  predicted_head_pitch  predicted_head_yaw  predicted_head_roll  \\\n",
-       "2695   4000             21.388008           148.24826             3.733878   \n",
+       "2275      2            351.284271          230.927063             2.415903   \n",
+       "2665      4            351.602997          233.405884             2.501633   \n",
+       "4206      5            351.423523          234.072800             2.518144   \n",
+       "499      10            352.840240          236.968872             2.691829   \n",
+       "1563     12            353.433258          242.206116             3.015769   \n",
+       "...     ...                   ...                 ...                  ...   \n",
+       "2432   6160            357.962280          281.465393             3.929520   \n",
+       "848    6160            357.906311          282.046936             3.928646   \n",
+       "2236   6161            357.973267          281.110138             3.923431   \n",
+       "3160   6161            357.972595          280.849640             3.918670   \n",
+       "316    6164            357.973145          277.838531             3.864585   \n",
        "\n",
        "      predicted_eye_x_t  predicted_eye_y_t  predicted_eye_z_t  \n",
-       "2695           0.285734          -0.667088          -0.742957  "
+       "2275          -0.813834           0.082975          -0.519310  \n",
+       "2665          -0.822167           0.079989          -0.515892  \n",
+       "4206          -0.827331           0.087796          -0.507282  \n",
+       "499           -0.841231           0.021823          -0.457232  \n",
+       "1563          -0.869174          -0.017185          -0.389148  \n",
+       "...                 ...                ...                ...  \n",
+       "2432          -0.897379          -0.200389           0.181674  \n",
+       "848           -0.893295          -0.198278           0.193512  \n",
+       "2236          -0.901189          -0.197387           0.171241  \n",
+       "3160          -0.902586          -0.196400           0.167179  \n",
+       "316           -0.919987          -0.184369           0.121693  \n",
+       "\n",
+       "[4322 rows x 7 columns]"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 446,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,9 +546,7 @@
     "    'predicted_eye_z_t': predictions[:, 5],# Use the frame numbers from the test set\n",
     "})\n",
     "sorted_df = preds.sort_values(by=['frame'], ascending=True)\n",
-    "sorted_df[:]\n",
-    "result = sorted_df[sorted_df['frame'] == 4000]\n",
-    "result"
+    "sorted_df[:]"
    ]
   },
   {
@@ -956,7 +891,7 @@
    "id": "c24378e7-f39a-4ebf-a522-69fb97a37ec5",
    "metadata": {},
    "source": [
-    "# Optimal FOV Calculation"
+    "# Predicted FOV Calculation"
    ]
   },
   {
@@ -1098,7 +1033,6 @@
     "    thickness = 2\n",
     "    frame_with_fov = cv2.rectangle(frame, top_left, bottom_right, color, thickness)\n",
     "\n",
-    "    # Release video capture\n",
     "    cap.release()\n",
     "\n",
     "    return frame_with_fov\n",
@@ -1140,8 +1074,8 @@
     "\n",
     "# Example Usage\n",
     "video_path = '/Users/adi/Documents/University/YEAR 4/FYP thesis/videos/Surfing.mp4'\n",
-    "frame_number = 3121 # Frame number to process\n",
-    "video_width = 4319  # Example video dimensions\n",
+    "frame_number = 3121 \n",
+    "video_width = 4319 \n",
     "video_height = 1920\n",
     "\n",
     "# Predictions DataFrame \n",
@@ -1155,7 +1089,7 @@
     "cv2.imwrite(output_frame_path, frame_with_fov)\n",
     "\n",
     "# Print the FOV in Cartesian coordinates\n",
-    "print(\"FOV Coordinates (Cartesian):\", fov_coordinates)\n"
+    "print(\"FOV Coordinates (Cartesian):\", fov_coordinates) #topleft and bottom right cartesian coordinates. \n"
    ]
   },
   {
